--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "vercel-build":"npx prisma migrate deploy"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
   },
   "author": "joaopedro",
   "license": "ISC",
