--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
     "@types/pg": "^8.10.9",
+    "@types/puppeteer": "^7.0.4",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "prisma": "^5.7.1",
@@ -24,12 +25,19 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.7",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "bcrypt-ts": "^5.0.1",
     "cors": "^2.8.5",
+    "dropbox": "^10.34.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "postgres": "^3.4.3",
+    "puppeteer": "^22.3.0",
     "ts-node-dev": "^2.0.0",
     "uuid": "^9.0.1",
     "vercel": "^33.0.2"
