--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "joaopedro",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
@@ -32,6 +33,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcrypt-ts": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dropbox": "^10.34.0",
     "express": "^4.18.2",
