--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "vercel-build": "npx prisma migrate deploy && npx prisma generate"
+    "vercel-build": "npx prisma migrate deploy"
   },
   "author": "joaopedro",
   "license": "ISC",
